--- a/theme.qrc
+++ b/theme.qrc
@@ -83,6 +83,7 @@
         <file>theme/black/state-sync-256.png</file>
         <file>theme/colored/state-error.svg</file>
         <file>theme/colored/state-error-16.png</file>
+        <file>theme/colored/icon-offline.svg</file>
         <file>theme/colored/state-offline.svg</file>
         <file>theme/colored/state-offline-16.png</file>
         <file>theme/colored/state-offline-32.png</file>
@@ -111,6 +112,7 @@
         <file>theme/black/control-prev.svg</file>
         <file>theme/black/state-error.svg</file>
         <file>theme/black/state-error-16.png</file>
+        <file>theme/black/icon-offline.svg</file>
         <file>theme/black/state-offline.svg</file>
         <file>theme/black/state-offline-16.png</file>
         <file>theme/black/state-offline-32.png</file>
