multi user functionality

--- a/theme.qrc
+++ b/theme.qrc
@@ -91,6 +91,7 @@
         <file>theme/colored/state-offline-128.png</file>
         <file>theme/colored/state-offline-256.png</file>
         <file>theme/colored/state-ok.svg</file>
+        <file>theme/colored/Icon-synch-done.svg</file>
         <file>theme/colored/state-ok-16.png</file>
         <file>theme/colored/state-pause.svg</file>
         <file>theme/colored/state-pause-16.png</file>
