--- a/src/gui/mnemonicdialog.ui
+++ b/src/gui/mnemonicdialog.ui
@@ -89,6 +89,9 @@
          <height>80</height>
         </size>
        </property>
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item>
