--- a/theme.qrc
+++ b/theme.qrc
@@ -228,6 +228,7 @@
         <file>theme/add.svg</file>
         <file>theme/Computer-Icon.svg</file>
         <file>theme/share.svg</file>
+        <file>theme/content-lock.png</file>
         <file>theme/link.svg</file>
         <file>theme/upload-cloud.svg</file>
         <file>theme/reply.svg</file>
