--- a/src/gui/generalsettings.ui
+++ b/src/gui/generalsettings.ui
@@ -6,39 +6,123 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>556</width>
-    <height>563</height>
+    <width>543</width>
+    <height>652</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string notr="true">Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout_3">
-   <item row="2" column="0">
-    <widget class="QGroupBox" name="aboutGroupBox">
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="4" column="0" rowspan="2">
+    <widget class="QGroupBox" name="dataPrivacyGroupBox">
      <property name="title">
-      <string>About</string>
+      <string>Data Privacy</string>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_3">
+     <layout class="QVBoxLayout" name="verticalLayout_4">
       <item>
-       <widget class="QLabel" name="aboutLabel">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
+       <widget class="QCheckBox" name="transferUsageDataCheckBox">
         <property name="text">
-         <string>About</string>
+         <string>Transfer usage data</string>
+        </property>
+        <property name="checked">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_6">
+       <layout class="QVBoxLayout" name="verticalLayout_3">
         <item>
-         <widget class="QPushButton" name="legalNoticeButton">
+         <widget class="QLabel" name="imprintLabel">
+          <property name="font">
+           <font>
+            <family>Segoe UI</family>
+            <pointsize>10</pointsize>
+            <weight>50</weight>
+            <italic>false</italic>
+            <bold>false</bold>
+           </font>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">font: 10pt &quot;Segoe UI&quot;;</string>
+          </property>
           <property name="text">
-           <string>Legal notice</string>
+           <string>Imprint</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="privacyPolicyLabel">
+          <property name="styleSheet">
+           <string notr="true">font: 10pt &quot;Segoe UI&quot;;</string>
+          </property>
+          <property name="text">
+           <string>Privacy Policy</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="openSourceSwLabel">
+          <property name="styleSheet">
+           <string notr="true">font: 10pt &quot;Segoe UI&quot;;</string>
+          </property>
+          <property name="text">
+           <string>Used Open Source Software</string>
+          </property>
+          <property name="textFormat">
+           <enum>Qt::AutoText</enum>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <spacer name="verticalSpacer">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeType">
+         <enum>QSizePolicy::Minimum</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <item>
+         <widget class="QLabel" name="aboutLabel">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="font">
+           <font>
+            <family>Segoe UI</family>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>About</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="infoLabel">
+          <property name="font">
+           <font>
+            <family>Segoe UI</family>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>Further Information</string>
           </property>
          </widget>
         </item>
@@ -67,12 +151,9 @@
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="1" column="0">
-       <widget class="QCheckBox" name="monoIconsCheckBox">
-        <property name="toolTip">
-         <string>For System Tray</string>
-        </property>
+       <widget class="QCheckBox" name="serverNotificationsCheckBox">
         <property name="text">
-         <string>Use &amp;Monochrome Icons</string>
+         <string>Show Server &amp;Notifications</string>
         </property>
        </widget>
       </item>
@@ -80,20 +161,6 @@
        <widget class="QCheckBox" name="autostartCheckBox">
         <property name="text">
          <string>&amp;Launch on System Startup</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QCheckBox" name="serverNotificationsCheckBox">
-        <property name="text">
-         <string>Show Server &amp;Notifications</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QCheckBox" name="callNotificationsCheckBox">
-        <property name="text">
-         <string>Show Call Notifications</string>
         </property>
        </widget>
       </item>
@@ -123,55 +190,6 @@
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_2">
         <item>
-         <widget class="QLabel" name="updateChannelLabel">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="text">
-           <string>&amp;Channel</string>
-          </property>
-          <property name="buddy">
-           <cstring>updateChannel</cstring>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QComboBox" name="updateChannel">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <item>
-           <property name="text">
-            <string>stable</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>beta</string>
-           </property>
-          </item>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLabel" name="updateStateLabel">
-          <property name="text">
-           <string/>
-          </property>
-          <property name="wordWrap">
-           <bool>true</bool>
-          </property>
-          <property name="openExternalLinks">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item>
          <widget class="QPushButton" name="restartButton">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
@@ -183,6 +201,19 @@
            <string>&amp;Restart &amp;&amp; Update</string>
           </property>
          </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
         </item>
        </layout>
       </item>
@@ -201,19 +232,6 @@
       </item>
      </layout>
     </widget>
-   </item>
-   <item row="4" column="0">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>0</height>
-      </size>
-     </property>
-    </spacer>
    </item>
    <item row="1" column="0">
     <widget class="QGroupBox" name="groupBox">
@@ -266,28 +284,6 @@
        </layout>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_8">
-        <item>
-         <widget class="QCheckBox" name="newExternalStorage">
-          <property name="text">
-           <string>Ask for confirmation before synchronizing external storages</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_10">
-        <item>
-         <widget class="QCheckBox" name="showInExplorerNavigationPaneCheckBox">
-          <property name="text">
-           <string>Show sync folders in &amp;Explorer's Navigation Pane</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item>
        <layout class="QHBoxLayout" name="horizontalLayout_9">
         <item>
          <widget class="QCheckBox" name="crashreporterCheckBox">
@@ -307,16 +303,9 @@
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_4">
         <item>
-         <widget class="QPushButton" name="ignoredFilesButton">
-          <property name="text">
-           <string>Edit &amp;Ignored Files</string>
-          </property>
-         </widget>
-        </item>
-        <item>
          <widget class="QPushButton" name="debugArchiveButton">
           <property name="text">
-           <string>Create Debug Archive</string>
+           <string>Create Debug Archive …</string>
           </property>
          </widget>
         </item>
@@ -338,18 +327,31 @@
      </layout>
     </widget>
    </item>
+   <item row="6" column="0">
+    <spacer name="verticalSpacer_2">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::Minimum</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
   </layout>
  </widget>
  <tabstops>
   <tabstop>autostartCheckBox</tabstop>
   <tabstop>serverNotificationsCheckBox</tabstop>
-  <tabstop>monoIconsCheckBox</tabstop>
-  <tabstop>ignoredFilesButton</tabstop>
   <tabstop>newFolderLimitCheckBox</tabstop>
   <tabstop>newFolderLimitSpinBox</tabstop>
   <tabstop>crashreporterCheckBox</tabstop>
   <tabstop>autoCheckForUpdatesCheckBox</tabstop>
-  <tabstop>restartButton</tabstop>
  </tabstops>
  <resources/>
  <connections>
@@ -360,12 +362,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>247</x>
-     <y>188</y>
+     <x>267</x>
+     <y>129</y>
     </hint>
     <hint type="destinationlabel">
-     <x>497</x>
-     <y>190</y>
+     <x>396</x>
+     <y>131</y>
     </hint>
    </hints>
   </connection>
