--- a/resources.qrc
+++ b/resources.qrc
@@ -51,5 +51,6 @@
         <file>src/gui/tray/EnforcedPlainTextLabel.qml</file>
         <file>theme/Style/Style.qml</file>
         <file>theme/Style/qmldir</file>
+        <file>theme/Style/MagentaStyle.qml</file>
     </qresource>
 </RCC>
