--- a/src/gui/generalsettings.ui
+++ b/src/gui/generalsettings.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>543</width>
-    <height>652</height>
+    <width>556</width>
+    <height>563</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -32,6 +32,13 @@
       </item>
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_3">
+        <item>
+         <widget class="QPushButton" name="legalNoticeButton">
+          <property name="text">
+           <string>Legal notice</string>
+          </property>
+         </widget>
+        </item>
         <item>
          <widget class="QLabel" name="imprintLabel">
           <property name="font">
@@ -151,9 +158,12 @@
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="1" column="0">
-       <widget class="QCheckBox" name="serverNotificationsCheckBox">
+       <widget class="QCheckBox" name="monoIconsCheckBox">
+        <property name="toolTip">
+         <string>For System Tray</string>
+        </property>
         <property name="text">
-         <string>Show Server &amp;Notifications</string>
+         <string>Use &amp;Monochrome Icons</string>
         </property>
        </widget>
       </item>
@@ -161,6 +171,20 @@
        <widget class="QCheckBox" name="autostartCheckBox">
         <property name="text">
          <string>&amp;Launch on System Startup</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QCheckBox" name="serverNotificationsCheckBox">
+        <property name="text">
+         <string>Show Server &amp;Notifications</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QCheckBox" name="callNotificationsCheckBox">
+        <property name="text">
+         <string>Show Call Notifications</string>
         </property>
        </widget>
       </item>
@@ -190,6 +214,55 @@
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_2">
         <item>
+         <widget class="QLabel" name="updateChannelLabel">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="text">
+           <string>&amp;Channel</string>
+          </property>
+          <property name="buddy">
+           <cstring>updateChannel</cstring>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QComboBox" name="updateChannel">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <item>
+           <property name="text">
+            <string>stable</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>beta</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="updateStateLabel">
+          <property name="text">
+           <string/>
+          </property>
+          <property name="wordWrap">
+           <bool>true</bool>
+          </property>
+          <property name="openExternalLinks">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="QPushButton" name="restartButton">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
@@ -201,19 +274,6 @@
            <string>&amp;Restart &amp;&amp; Update</string>
           </property>
          </widget>
-        </item>
-        <item>
-         <spacer name="horizontalSpacer">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
         </item>
        </layout>
       </item>
@@ -284,6 +344,28 @@
        </layout>
       </item>
       <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_8">
+        <item>
+         <widget class="QCheckBox" name="newExternalStorage">
+          <property name="text">
+           <string>Ask for confirmation before synchronizing external storages</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_10">
+        <item>
+         <widget class="QCheckBox" name="showInExplorerNavigationPaneCheckBox">
+          <property name="text">
+           <string>Show sync folders in &amp;Explorer's Navigation Pane</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
        <layout class="QHBoxLayout" name="horizontalLayout_9">
         <item>
          <widget class="QCheckBox" name="crashreporterCheckBox">
@@ -302,6 +384,13 @@
       </item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_4">
+        <item>
+         <widget class="QPushButton" name="ignoredFilesButton">
+          <property name="text">
+           <string>Edit &amp;Ignored Files</string>
+          </property>
+         </widget>
+        </item>
         <item>
          <widget class="QPushButton" name="debugArchiveButton">
           <property name="text">
@@ -348,10 +437,13 @@
  <tabstops>
   <tabstop>autostartCheckBox</tabstop>
   <tabstop>serverNotificationsCheckBox</tabstop>
+  <tabstop>monoIconsCheckBox</tabstop>
+  <tabstop>ignoredFilesButton</tabstop>
   <tabstop>newFolderLimitCheckBox</tabstop>
   <tabstop>newFolderLimitSpinBox</tabstop>
   <tabstop>crashreporterCheckBox</tabstop>
   <tabstop>autoCheckForUpdatesCheckBox</tabstop>
+  <tabstop>restartButton</tabstop>
  </tabstops>
  <resources/>
  <connections>
@@ -362,12 +454,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>267</x>
-     <y>129</y>
+     <x>247</x>
+     <y>188</y>
     </hint>
     <hint type="destinationlabel">
-     <x>396</x>
-     <y>131</y>
+     <x>497</x>
+     <y>190</y>
     </hint>
    </hints>
   </connection>
