--- a/src/gui/generalsettings.ui
+++ b/src/gui/generalsettings.ui
@@ -6,130 +6,39 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>556</width>
-    <height>563</height>
+    <width>592</width>
+    <height>603</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string notr="true">Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="4" column="0" rowspan="2">
-    <widget class="QGroupBox" name="dataPrivacyGroupBox">
+  <layout class="QGridLayout" name="gridLayout_3">
+   <item row="2" column="0">
+    <widget class="QGroupBox" name="aboutGroupBox">
      <property name="title">
-      <string>Data Privacy</string>
+      <string>About</string>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_4">
+     <layout class="QVBoxLayout" name="verticalLayout_3">
       <item>
-       <widget class="QCheckBox" name="transferUsageDataCheckBox">
-        <property name="text">
-         <string>Transfer usage data</string>
+       <widget class="QLabel" name="aboutLabel">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
         </property>
-        <property name="checked">
-         <bool>false</bool>
+        <property name="text">
+         <string>About</string>
         </property>
        </widget>
       </item>
       <item>
-       <layout class="QVBoxLayout" name="verticalLayout_3">
+       <layout class="QHBoxLayout" name="horizontalLayout_6">
         <item>
          <widget class="QPushButton" name="legalNoticeButton">
           <property name="text">
            <string>Legal notice</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLabel" name="imprintLabel">
-          <property name="font">
-           <font>
-            <family>Segoe UI</family>
-            <pointsize>10</pointsize>
-            <weight>50</weight>
-            <italic>false</italic>
-            <bold>false</bold>
-           </font>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">font: 10pt &quot;Segoe UI&quot;;</string>
-          </property>
-          <property name="text">
-           <string>Imprint</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLabel" name="privacyPolicyLabel">
-          <property name="styleSheet">
-           <string notr="true">font: 10pt &quot;Segoe UI&quot;;</string>
-          </property>
-          <property name="text">
-           <string>Privacy Policy</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLabel" name="openSourceSwLabel">
-          <property name="styleSheet">
-           <string notr="true">font: 10pt &quot;Segoe UI&quot;;</string>
-          </property>
-          <property name="text">
-           <string>Used Open Source Software</string>
-          </property>
-          <property name="textFormat">
-           <enum>Qt::AutoText</enum>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item>
-       <spacer name="verticalSpacer">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeType">
-         <enum>QSizePolicy::Minimum</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
-       <layout class="QHBoxLayout" name="horizontalLayout">
-        <item>
-         <widget class="QLabel" name="aboutLabel">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="font">
-           <font>
-            <family>Segoe UI</family>
-            <pointsize>10</pointsize>
-           </font>
-          </property>
-          <property name="text">
-           <string>About</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLabel" name="infoLabel">
-          <property name="font">
-           <font>
-            <family>Segoe UI</family>
-            <pointsize>10</pointsize>
-           </font>
-          </property>
-          <property name="text">
-           <string>Further Information</string>
           </property>
          </widget>
         </item>
@@ -293,6 +202,19 @@
      </layout>
     </widget>
    </item>
+   <item row="4" column="0">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>0</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
    <item row="1" column="0">
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
@@ -394,7 +316,7 @@
         <item>
          <widget class="QPushButton" name="debugArchiveButton">
           <property name="text">
-           <string>Create Debug Archive …</string>
+           <string>Create Debug Archive</string>
           </property>
          </widget>
         </item>
@@ -415,22 +337,6 @@
       </item>
      </layout>
     </widget>
-   </item>
-   <item row="6" column="0">
-    <spacer name="verticalSpacer_2">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeType">
-      <enum>QSizePolicy::Minimum</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
    </item>
   </layout>
  </widget>
