--- a/theme/Style/style.qss
+++ b/theme/Style/style.qss
@@ -1,6 +1,6 @@
 
-QToolBar { background: qproperty-background; margin: 0; padding: 0; border: none; border-bottom: 1px solid qproperty-dark; spacing: 0; }
-QToolBar QToolButton { background: qproperty-background; border: none; border-bottom: 1px solid qproperty-dark; margin: 0; padding: 5px; }
+QToolBar { background: qproperty-backgroundColor; margin: 0; padding: 0; border: none; border-bottom: 1px solid qproperty-dark; spacing: 0; }
+QToolBar QToolButton { background: qproperty-backgroundColor; border: none; border-bottom: 1px solid qproperty-dark; margin: 0; padding: 5px; }
 QToolBar QToolBarExtension { padding:0; }
 QToolBar QToolButton:checked { background: qproperty-highlightColor; color: qproperty-highlightTextColor; }
 
