--- a/theme/Style/style.qss
+++ b/theme/Style/style.qss
@@ -1,7 +1,7 @@
 
-QToolBar { background: qproperty-backgroundColor; margin: 0; padding: 0; border: none; border-bottom: 1px solid qproperty-dark; spacing: 0; }
-QToolBar QToolButton { background: qproperty-backgroundColor; border: none; border-bottom: 1px solid qproperty-dark; margin: 0; padding: 5px; }
+QToolBar { background: %1; margin: 0; padding: 0; border: none; border-bottom: 1px solid %2; spacing: 0; }
+QToolBar QToolButton { background: %1; border: none; border-bottom: 1px solid %2; margin: 0; padding: 5px; }
 QToolBar QToolBarExtension { padding:0; }
-QToolBar QToolButton:checked { background: qproperty-highlightColor; color: qproperty-highlightTextColor; }
+QToolBar QToolButton:checked { background: %3; color: %4; }
 
 
