Global theme changes for stylesheet

--- a/theme/Style/style.qss
+++ b/theme/Style/style.qss
@@ -1,9 +1,9 @@
 
-QToolBar { background: %1; margin: 0; padding: 0; border: none; border-bottom: 1px solid %2; spacing: 0; }
-QToolBar QToolButton { background: %1; border: none; border-bottom: 1px solid %2; margin: 0; padding: 5px; }
+QToolBar { background: %1; margin: 0; padding: 8px; padding-left: 0px; border: none; border-bottom: 1px solid %2; spacing: 16px; }
+QToolBar QToolButton { background: %1; font: 14px; border: none; border-bottom: 1px solid %2; margin: 0px; padding: 13px; }
 QToolBar QToolBarExtension { padding:0; }
-QToolBar QToolButton:checked { background: %3; color: %4; }
+QToolBar QToolButton:checked { background: %1; color: #e20074; }
 
 
-QProgressBar { border: 1px solid grey; border-radius: 5px; text-align: center; }
-QProgressBar::chunk { background-color: %3 ; width: 1px; }
+QProgressBar { border: 0px solid grey; border-radius: 5px; height: 4px; background-color: #CCCCCC; text-align: center; }
+QProgressBar::chunk { background-color: #e20074; height: 4px; }
