--- a/src/gui/folderwizardtargetpage.ui
+++ b/src/gui/folderwizardtargetpage.ui
@@ -17,7 +17,8 @@
    <item>
     <widget class="QLabel" name="subHeader">
      <property name="styleSheet">
-      <string notr="true"/>
+      <string notr="true">font: 14px &quot;Segoe UI&quot;;
+color:#e20074</string>
      </property>
      <property name="text">
       <string/>
