--- a/src/gui/accountsettings.ui
+++ b/src/gui/accountsettings.ui
@@ -84,7 +84,8 @@
         <property name="font">
          <font>
           <family>Segoe UI</family>
-          <pointsize>9</pointsize>
+          <pointsize>14</pointsize>
+          <weight>50</weight>
           <bold>false</bold>
           <kerning>true</kerning>
          </font>
@@ -96,10 +97,10 @@
          <bool>false</bool>
         </property>
         <property name="text">
-         <string>Storage space: …</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#191919;&quot;&gt;Storage space: …&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="textFormat">
-         <enum>Qt::PlainText</enum>
+         <enum>Qt::RichText</enum>
         </property>
         <property name="alignment">
          <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
